# approval-learner

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: approval-query.sh
src/: approval_learner.py
tests/: test_approval_learner.py
